awp off screen error fix

--- a/src/components/scss/page/awp.scss
+++ b/src/components/scss/page/awp.scss
@@ -14,6 +14,9 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
+      @include mobile() {
+        height: 400px;
+      }
       .section-content {
         max-width: 700px;
         h2 {
@@ -22,6 +25,9 @@
           font-weight: 400;
           font-family: Georgia;
           margin: 0px;
+          @include mobile() {
+            font-size: 40px;
+          }
         }
         h3 {
           color: white;
@@ -29,6 +35,9 @@
           margin: 0px 0px 10px 0px;
           padding-bottom: 15px;
           border-bottom: 1px solid white;
+          @include mobile() {
+            font-size: 40px;
+          }
         }
         p {
           font-size: 18px;
